@@ -11,6 +11,8 @@ FEATURE:	Add support for a GFILE user provided file system
 FEATURE:	Add gwinListItemSetText() to replace text in a GWIN list item
 FEATURE:	Added GDISP_IMAGE_BMP_BLIT_BUFFER_SIZE configuration option
 FEATURE:	Added GDISP_IMAGE_PNG_BLIT_BUFFER_SIZE configuration option
+FEATURE:	Added GDISP_IMAGE_PNG_FILE_BUFFER_SIZE configuration option
+FEATURE:	Added GDISP_IMAGE_PNG_Z_BUFFER_SIZE configuration option
 
 
 *** Release 2.7 ***
